# EchoLab

./: .gitignore  README.md  pyproject.toml
configs/archive/: archive.yaml  filter.yaml
configs/basis/: bases.yaml
configs/experiments/: horizon.yaml  salience_audit.yaml
configs/hardware/: compute.yaml
configs/policies/: axs_ucb.yaml  fixed_balanced.yaml  fixed_low_to_high.yaml  oracle_coverage.yaml  oracle_diversity.yaml  oracle_strategy.yaml  pseudo_user_model.yaml  pseudo_user_model_diversity_reg.yaml  pseudo_user_model_session_embedding.yaml  random.yaml  trace_greedy.yaml  trace_lin_ucb.yaml
tests/: test_aggregate.py  test_archive_builder.py  test_archive_coverage.py  test_axs_common.py  test_axs_dead_calibration.py  test_axs_runners.py  test_axs_schedule_gen.py  test_axs_v3_runners.py  test_basis_schema.py  test_card_schema.py  test_claim_check.py  test_compute_backend.py  test_config_freeze.py  test_constraints.py  test_degenerate_filter.py  test_display_names.py  test_e1_horizon.py  test_e2_aggregation.py  test_e2_policy.py  test_e3_audit.py  test_e_leakage_diagnostic.py  test_figures.py  test_hash_utils.py  test_horizon.py  test_inline_replay.py  test_ladder_gate.py  test_manifest.py  test_metrics_channel_separability.py  test_metrics_compare.py  test_metrics_distribution.py  test_metrics_effect_size.py  test_metrics_leakage.py  test_metrics_rank_stability.py  test_metrics_regret.py  test_metrics_replay.py  test_metrics_robustness.py  test_metrics_salience.py  test_metrics_saturation.py  test_metrics_separability.py  test_metrics_strategy.py  (+35 more)
(+94 files in other folders)
